--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 API_PORT=8080
 MONGO_URI=mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000
-
-TOKEN_KEY=haraouri
+TOKEN_SECRET="its a secret"
