--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.5",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.0",
+    "sequelize": "^6.6.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
