--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 API_PORT=8080
 MONGO_URI=mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000
 TOKEN_SECRET="its a secret"
+
+DB_NAME=todo
+DB_USERNAME=root
+DB_PASSWORD=root
+DB_HOST=127.0.0.1
+DB_PORT=3307
